<resources>
    <string name="app_name">PracticaTema5PMDM</string>
    <string name="app_name1">Configurar Toast</string>
    <string name="app_name2">Configurar Notificación</string>
    <string name="button">Configurar Toast</string>
    <string name="button1">Configurar Notificación</string>
    <string name="mostrar">Mostrar</string>
    <string name="izquierda">Izquierda</string>
    <string name="medio">Medio</string>
    <string name="derecha">Derecha</string>
    <string name="arriba">Arriba</string>
    <string name="centro">Centro</string>
    <string name="abajo">Abajo</string>
    <string name="enviar">Enviar</string>
    <string name="t_tulo_del_mensaje">Título del mensaje</string>
    <string name="texto_del_mensaje">Texto del mensaje</string>
    <string name="segundos_para_que_salga_la_notificaci_n">Segundos para que salga la notificación</string>
</resources>
